fixed dt spacing issue

--- a/app/assets/stylesheets/uoh-bl/_tables.css.scss
+++ b/app/assets/stylesheets/uoh-bl/_tables.css.scss
@@ -39,5 +39,4 @@
 .dl-invert dt {
   color: #444444;
   font-style: italic;
-  width: 158px;
 }
